deploy/usermanager/k8s.yaml
---
# Source: usermanager/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usermanager
  labels:
    helm.sh/chart: usermanager-0.1.0
    app.kubernetes.io/name: usermanager
    app.kubernetes.io/instance: usermanager
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: usermanager
    app.kubernetes.io/instance: usermanager
---
# Source: usermanager/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermanager
  labels:
    helm.sh/chart: usermanager-0.1.0
    app.kubernetes.io/name: usermanager
    app.kubernetes.io/instance: usermanager
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: usermanager
      app.kubernetes.io/instance: usermanager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: usermanager
        app.kubernetes.io/instance: usermanager
    spec:
      serviceAccountName: usermanager
      securityContext:
        {}
      containers:
        - name: usermanager
          securityContext:
            {}
          image: "usermanager:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            {}
---
# Source: usermanager/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: usermanager
  labels:
    helm.sh/chart: usermanager-0.1.0
    app.kubernetes.io/name: usermanager
    app.kubernetes.io/instance: usermanager
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "api.auctionbidder.com"
      http:
        paths:
          - path: /v1/users
            backend:
              serviceName: usermanager
              servicePort: 80
          - path: /v1/users/.*
            backend:
              serviceName: usermanager
              servicePort: 80
---
# Source: usermanager/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "usermanager-test-connection"
  labels:
    helm.sh/chart: usermanager-0.1.0
    app.kubernetes.io/name: usermanager
    app.kubernetes.io/instance: usermanager
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['usermanager:80/health']
  restartPolicy: Never
